--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,12 @@ html {
           box-sizing: border-box;
 }
 
+@media screen and (min-width: 320px) {
+  html {
+    overflow-x: hidden;
+  }
+}
+
 *,
 *::before,
 *::after {
@@ -15,6 +21,12 @@ html {
   font-family: Roboto, sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 320px) {
+  .body {
+    overflow-x: hidden;
+  }
 }
 
 h1,
@@ -403,11 +415,9 @@ ul {
   background-color: #188ce8;
 }
 
-@media screen and (max-width: 1199px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -424,7 +434,7 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
     margin-bottom: -30px;
   }
 }
@@ -465,7 +475,7 @@ ul {
   .pros__item {
     -ms-flex-preferred-size: calc(100% / 2 - 30px);
         flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
     margin-bottom: 30px;
   }
 }
@@ -539,7 +549,7 @@ ul {
   .service__title,
   .team__title,
   .clients__title {
-    width: 100%;
+    width: calc(100%-30px);
   }
 }
 
@@ -547,7 +557,7 @@ ul {
   .service__title,
   .team__title,
   .clients__title {
-    width: 480px;
+    width: 450px;
   }
 }
 
@@ -612,7 +622,7 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
     margin-bottom: -30px;
   }
 }
@@ -644,7 +654,7 @@ ul {
   .team-members__item {
     -ms-flex-preferred-size: calc(100% / 2 - 30px);
         flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
     margin-bottom: 30px;
   }
 }
@@ -1265,7 +1275,7 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  max-width: 450px;
   height: 609px;
   background-color: #ffffff;
   -webkit-transform: translate(-50%, -50%) scale(1);
@@ -1274,6 +1284,12 @@ ul {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1199px) {
@@ -1407,13 +1423,19 @@ ul {
   margin-bottom: 20px;
   padding-left: 16px;
   padding-top: 12px;
-  width: 370px;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal__comments {
+    width: 370px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1701,7 +1723,19 @@ ul {
 }
 
 .card__thumb-text {
-  padding: 63px 24px;
+  padding: 77px 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .card__thumb-text {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card__thumb-text {
+    padding: 63px 24px;
+  }
 }
 
 .card__description {
