--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,12 +23,16 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  max-width: 450px;
   height: 609px;
 
   background-color: $text-color;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
 
   @media screen and (min-width: 1199px) {
     min-width: 528px;
@@ -137,14 +141,16 @@
   margin-bottom: 20px;
   padding-left: 16px;
   padding-top: 12px;
-  width: 370px;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
   @media screen and (min-width: 1200px) {
     width: 448px;
   }
