--- a/sass/components/_pros.scss
+++ b/sass/components/_pros.scss
@@ -1,10 +1,7 @@
-.pros {
-}
-
 .section {
-  @media screen and (max-width: 1199px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 480px) {
   }
 
   @media screen and (min-width: 1200px) {
@@ -17,7 +14,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
     margin-bottom: -30px;
   }
   @media screen and (min-width: 1200px) {
@@ -45,7 +42,7 @@
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
     margin-bottom: 30px;
   }
 }
