--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -24,11 +24,11 @@
   margin-top: 0px;
 
   @media screen and (max-width: 479px) {
-    width: 100%;
+    width: calc(100%-30px);
   }
 
   @media screen and (min-width: 480px) and (max-width: 767px) {
-    width: 480px;
+    width: 450px;
   }
 
   @media screen and (max-width: 1199px) {
