--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,7 +6,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
     margin-bottom: -30px;
   }
 
@@ -28,7 +28,7 @@
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
     margin-bottom: 30px;
   }
 
