--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,6 +14,10 @@ $secondary-font: Raleway;
 
 html {
   box-sizing: border-box;
+
+  @media screen and (min-width: 320px) {
+    overflow-x: hidden;
+  }
 }
 
 *,
@@ -27,7 +31,11 @@ html {
   font-family: $primary-font, sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 320px) {
+    overflow-x: hidden;
+  }
 }
+
 h1,
 h2,
 h3,
